Fix navigation styling on small screens

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -459,20 +459,30 @@ table th[class*="span"],
 
 // Grid global styles
 .grid_1,
+.grid_20p,
 .grid_half,
+.grid_60p
 .grid_2,
 .grid_3 {
     display: inline;
     float: left;
 }
 
-// Column Grid (3 max, 4 possible widths - screw the 1%)
+// Column Grid
 .grid_1 {
     width: 33.33%;
 }
 
+.grid_20p {
+    width: 20%;
+}
+
 .grid_half {
     width: 50%;
+}
+
+.grid_60p {
+    width: 60%;
 }
 
 .grid_2 {
